ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # namespace: capstone
  name: ingress-capstone
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
        - path: /product
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 3000
        - path: /review
          pathType: Prefix
          backend:
            service:
              name: review-service
              port:
                number: 3001
        - path: /inventory
          pathType: Prefix
          backend:
            service:
              name: inventory-service
              port:
                number: 3002
        - path: /shopping
          pathType: Prefix
          backend:
            service:
              name: shopping-service
              port:
                number: 3003
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: user-service
              port:
                number: 3004
        - path: /order
          pathType: Prefix
          backend:
            service:
              name: order-service
              port:
                number: 8080



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   annotations:
#     # kubernetes.io/ingress.class: alb
#     # alb.ingress.kubernetes.io/scheme: internet-facing
#     # alb.ingress.kubernetes.io/target-type: ip
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx-example
#   rules:
#   - http:
#       paths:
#       - path: /product-service
#         pathType: Prefix
#         backend:
#           service:
#             name: product-service
#             port:
#               number: 80
